--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
 
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
+ <!DOCTYPE html>
+ <html lang="en">
 
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
+ <head>
+    <meta charset="UTF-8">
+    <title>Jaahnvi's Portfolio</title>
+ </head>
 
-<!-- TODO 4: Add titles/subtitles etc. -->
+ <body>
+    <h1>Jaahnvi's Portfolio</h1>
+    <h2>I am a developer</h2>
+    <hr/>
+    <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
+    <img src="./assets/images/Screenshot 2024-07-05 195739.png" height="200" alt="Movie Ranking Project preview">
+    <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
+    <img src="./assets/images/Screenshot 2024-07-05 200317.png" height="200" alt="Birthday Intive Project preview">
+    <hr/>
+    <a href="./public/about.html">About Me</a>
+    <a href="./public/contact.html">Contact Me</a>
+</body>
 
-<!-- TODO 5: Add a link to the project pages -->
+ </html>
 
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
